--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <ul class="nav justify-content-center" style="
     padding-bottom: 2%;
     padding-top: 2%;">
-    <a class="navbar-brand" href="./index.html">
+    <a class="navbar-brand" href="./inicio.html">
       <img src="./assets/img/Helprogram1.png" class="logo" alt="logo" width="150">
     </a>
 
@@ -115,13 +115,14 @@
 
 
   <br>
+  <!--
   <div class="containeer2">
       <h3>HELPROGRAM</h3>
       <br>
       <p>Hola, ¿Te gusta programar?, bienvenido a <strong>HELPROGRAM</strong> el aplicativo web donde aprenderas de porogramación, contamos con diversos temas que te ayudarán a iniciarte en este 
           mundo de la porogramación, también encontrarés muchos datos y consejos interesantes para facilitar aun mas tu aprendizaje, asi que animate y empieza este camino tan espectacular.  </p>
       </div>
-<!--
+
   <div class="container rounded-1 bg-light" data-aos="fade-down">
     <br>
     <h3 class="display-5 bg-dark"><span class="badge badge-secondary">HELPROGRAM</span></h3>
