--- a/formHtmlCss.html
+++ b/formHtmlCss.html
@@ -22,7 +22,7 @@
     <ul class="nav justify-content-center" style="
     padding-bottom: 2%;
     padding-top: 2%;">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="./inicio.html">
             <img src="./assets/img/Helprogram1.png" class="logo" alt="logo" width="150">
         </a>
 
