corrección del error del form js

--- a/htmlCss.html
+++ b/htmlCss.html
@@ -64,9 +64,9 @@
     <div class="container bg-light  rounded-1" data-aos="fade-down">
         <br>
         <br>
-        <h2 class="display-5"><strong>Acerca de este Curso</strong></h2>
+        <h2 class="display-5"><strong>Acerca de este curso</strong></h2>
         <hr>
-        <ol>Bienvenido a este curso de HTML y CSS, en este curso aprenderas algunos de los conceptos mas importantes
+        <ol>Bienvenido a este curso de HTML y CSS, en este curso aprenderás algunos de los conceptos más importantes
             sobre etiquetas y clases.
         </ol>
         <br>
