--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
   <br>
   <div class="containeer2">
       <h3>HELPROGRAM</h3>
+      <hr>
       <br>
-      <p>Hola, ¿Te gusta programar?, bienvenido a <strong>HELPROGRAM</strong> el aplicativo web donde aprenderas de porogramación, contamos con diversos temas que te ayudarán a iniciarte en este 
-          mundo de la porogramación, también encontrarés muchos datos y consejos interesantes para facilitar aun mas tu aprendizaje, asi que animate y empieza este camino tan espectacular.  </p>
+      <p>Hola, ¿Te gusta programar?, bienvenido a <strong>HELPROGRAM</strong> el aplicativo web donde aprenderás de programación, contamos con diversos temas que te ayudarán a iniciarte en este 
+          mundo de la programación, también encontrarás muchos datos y consejos interesantes para facilitar aún más tu aprendizaje, así que anímate y empieza este camino tan espectacular.  </p>
       </div>
 <!--
   <div class="container rounded-1 bg-light" data-aos="fade-down">
@@ -180,7 +181,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><strong>HTML Y CSS</strong></h5>
-                <p class="card-text">Curso de HTML y CSS, en este curso aprenderas algunos de los conceptos mas
+                <p class="card-text">Curso de HTML y CSS, en este curso aprenderás algunos de los conceptos más
                   importantes sobre etiquetas y clases.</p>
                 <br>
                 <br>
@@ -200,8 +201,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><strong>LÓGICA Y ALGORÍTMIA</strong></h5>
-                <p class="card-text">Curso de Lógica y Algoritmia, en el curso se aprendera sobre los diferentes
-                  conceptos que maneja el tema, conecto y operadores lógicos.</p>
+                <p class="card-text">Curso de Lógica y Algoritmia, en el curso se aprenderá sobre los diferentes
+                  conceptos que maneja el tema y operadores lógicos.</p>
                 <br>
                 <a href="logica.html" class="btn btn-primary">Comenzar</a>
 
@@ -219,7 +220,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><strong>JAVASCRIPT</strong></h5>
-                <p class="card-text"> Curso de javascript donde aprenderas algunos tips y herramientas para mejorar tu
+                <p class="card-text"> Curso de javascript donde aprenderás algunos tips y herramientas para mejorar tu
                   experiencia con este lenguaje</p>
                 <br>
                 <a href="js.html" class="btn btn-primary">Comenzar</a>
@@ -237,8 +238,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><strong>BOOTSTRAP</strong></h5>
-                <p class="card-text">Curso de Boostrap donde se aprendera sobre las diferentes formas de instalar
-                  Boostrap, que es Boostrap y entre otros temas.</p>
+                <p class="card-text">Curso de Boostrap donde se aprenderá sobre las diferentes formas de instalar
+                  Boostrap, qué es Boostrap y entre otros temas.</p>
                 <br>
                 <a href="bootstrap.html" class="btn btn-primary">Comenzar</a>
 
