--- a/juego.html
+++ b/juego.html
@@ -54,7 +54,7 @@
     <div class="card text-center">
       <br>
       <br>
-      <h1 class="display-5"><b>Quien Quiere Ser Millonario</b></h1>
+      <h1 class="display-5"><b>¿Quién quiere ser millonario?</b></h1>
       <h2 class="display-5" id="punt">
         Puntos a ganar por la actual pregunta:
         <div id="ganados"></div>
