--- a/formJS.html
+++ b/formJS.html
@@ -69,7 +69,7 @@
         <br>
 
         <form name="Form" onsubmit="return validateForm()" class="" id="Form">
-            <!--<input type="hidden" name="t" value="2">-->
+            <input type="hidden" name="t" value="2">
 
             <div class="card card-padding">
                 <p>Nombre <i class="red">*</i></p>
