--- a/formRepositorios.html
+++ b/formRepositorios.html
@@ -29,7 +29,7 @@
         </a>
 
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="./cursos.html">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="./info.html">Sobre Nosotros</a>
