--- a/formRepositorios.html
+++ b/formRepositorios.html
@@ -11,6 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./assets/css/formRepositorios.css">
+    <link rel="shortcut icon" href="./assets/img/Helprogram1.ico" type="image/x-icon">
 
     <style>
         .error {
