--- a/cursos.html
+++ b/cursos.html
@@ -65,9 +65,17 @@
         aria-label="Slide 5"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
         aria-label="Slide 6"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+        aria-label="Slide 7"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <img src="./assets/img/bienvenida.gif" class="d-block w-100" alt="image" width="600" height="600" alt="error">
+        <div class="carousel-caption d-none d-md-block">
+         
+        </div>
+      </div>
+      <div class="carousel-item">
         <img src="./assets/img/html-css.jpg" class="d-block w-100" alt="image" width="600" height="600" alt="error">
         <div class="carousel-caption d-none d-md-block">
           <h5><strong>HTML Y CSS</strong></h5>
