--- a/scrum.html
+++ b/scrum.html
@@ -389,7 +389,7 @@
 
     <br>
 
-    <footer class="footer bg-black small text-center text-white-50">
+    <footer class="footer1 bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
         </div>
 
