--- a/repositorios.html
+++ b/repositorios.html
@@ -341,7 +341,8 @@
         <br>
     </div>
 
-    <footer class="footer bg-black small text-center text-white-50">
+    <br>
+    <footer class="footer1 bg-black small text-center text-white-50">
         <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
         </div>
 
