--- a/juego.html
+++ b/juego.html
@@ -81,9 +81,9 @@
 
       
     </div>
-    <div class="card text-center bg-dark" id="pregunta1">
+    <div class="card text-center fondo" id="pregunta1">
 
-      <h3 class="display-5 bg-dark h3"> 1. ¿Cuál sería el resultado de 3+2+''7''? </h3>
+      <h3 class="display-5 h3 fondo"> 1. ¿Cuál sería el resultado de 3+2+''7''? </h3>
       <br>
       <br>
       <div class="millonario__item">
@@ -113,10 +113,10 @@
     <br />
 
 
-    <div class="card text-center bg-dark" id="pregunta2">
+    <div class="card text-center fondo" id="pregunta2">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 2.¿Cuales son los tipos de datos JavaScript? </h3>
+      <h3 class="display-5 fondo h3"> 2.¿Cuales son los tipos de datos JavaScript? </h3>
       <br>
       <br>
       <div class="millonario__item">
@@ -147,10 +147,10 @@
       <br>
       <br>
     </div>
-    <div class="card text-center bg-dark" id="pregunta3">
+    <div class="card text-center fondo" id="pregunta3">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 3.¿Qué símbolo se utiliza para los comentarios de una sola linea en Javascript?
+      <h3 class="display-5 fondo h3"> 3.¿Qué símbolo se utiliza para los comentarios de una sola linea en Javascript?
       </h3>
       <br>
       <br>
@@ -183,10 +183,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta4">
+    <div class="card text-center fondo" id="pregunta4">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 4.¿Qué significa el acrónimo HTML? </h3>
+      <h3 class="display-5 fondo h3"> 4.¿Qué significa el acrónimo HTML? </h3>
       <br>
       <br>
       <div class="millonario__item">
@@ -215,10 +215,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta5">
+    <div class="card text-center fondo" id="pregunta5">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 5.¿Qué etiqueta se usa para escribir una lista no ordenada?
+      <h3 class="display-5 fondo h3"> 5.¿Qué etiqueta se usa para escribir una lista no ordenada?
       </h3>
       <br>
       <br>
@@ -255,10 +255,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta6">
+    <div class="card text-center fondo" id="pregunta6">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 6.Las siguientes instrucciones vienen acompañadas de un atributo. ¿Cuál es
+      <h3 class="display-5 fondo h3"> 6.Las siguientes instrucciones vienen acompañadas de un atributo. ¿Cuál es
         correcto?</h3>
       <br>
       <br>
@@ -295,10 +295,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta7">
+    <div class="card text-center fondo" id="pregunta7">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 7.¿Qué significa CSS?</h3>
+      <h3 class="display-5 fondo h3"> 7.¿Qué significa CSS?</h3>
       <br>
       <br>
       <div class="millonario__item">
@@ -330,10 +330,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta8">
+    <div class="card text-center fondo" id="pregunta8">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 8.¿Cómo podemos añadir un comentario en una hoja de estilo CSS? </h3>
+      <h3 class="display-5 fondo h3"> 8.¿Cómo podemos añadir un comentario en una hoja de estilo CSS? </h3>
       <br>
       <br>
       <div class="millonario__item">
@@ -364,10 +364,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta9">
+    <div class="card text-center fondo" id="pregunta9">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 9.¿En qué sección de la página HTML podemos definir una hoja de estilo interna
+      <h3 class="display-5 fondo h3"> 9.¿En qué sección de la página HTML podemos definir una hoja de estilo interna
         CSS?</h3>
       <br>
       <br>
@@ -398,10 +398,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta10">
+    <div class="card text-center fondo" id="pregunta10">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 10.Git hub es un portal creado para alojar el código de las aplicaciones de
+      <h3 class="display-5 fondo h3"> 10.Git hub es un portal creado para alojar el código de las aplicaciones de
         cualquier desarrollador y que fue comprado por:
       </h3>
       <div class="millonario__item">
@@ -429,10 +429,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta11">
+    <div class="card text-center fondo" id="pregunta11">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 11.¿Cual de estas aplicaciones es un repositorio? </h3>
+      <h3 class="display-5 fondo h3"> 11.¿Cual de estas aplicaciones es un repositorio? </h3>
       <br>
       <br>
       <div class="millonario__item">
@@ -460,10 +460,10 @@
       <br>
     </div>
 
-    <div class="card text-center bg-dark" id="pregunta12">
+    <div class="card text-center fondo" id="pregunta12">
       <br>
       <br>
-      <h3 class="display-5 bg-dark h3"> 12.¿Para que sirve el comando git init?</h3>
+      <h3 class="display-5 fondo h3"> 12.¿Para que sirve el comando git init?</h3>
       <br>
       <br>
       <div class="millonario__item">
