--- a/cursos.html
+++ b/cursos.html
@@ -45,7 +45,7 @@
         aria-expanded="false">
         Juego </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+        <li><a class="dropdown-item" href="juego.html">¿Quién quiere ser millonario?</a></li>
       </ul>
     </li>
 
@@ -286,7 +286,7 @@
               <div class="card-body">
                 <h5 class="card-title"><strong>SCRUM</strong></h5>
                 <p class="card-text">Curso de Scrum, en este curso aprenderás sobre la metodología ágil Scrum, sus
-                  componentes y como aplicarlo a tus proyectos</p>
+                  componentes y cómo aplicarlo a tus proyectos</p>
                 <br>
 
                 <a href="scrum.html" class="btn btn-primary">Comenzar</a>
