--- a/info.html
+++ b/info.html
@@ -48,7 +48,7 @@
                 aria-expanded="false">
                 Juego </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+                <li><a class="dropdown-item" href="juego.html">¿Quién quiere ser millonario?</a></li>
             </ul>
         </li>
 
@@ -125,7 +125,7 @@
             <div class="card card-padding" data-aos="fade-down">
                 <div class="card-header fondo" >
                     <br>
-                    <img class="borde-img" src="./assets/img/JuanDavidDaza.jpeg" />
+                    <img class="borde-img" src="./assets/img/JuanDavidDaza.jpg" />
                     <br>
                     <br>
                     <span class="tag tag-teal nombres">Lider Front</span>
