--- a/juego.html
+++ b/juego.html
@@ -44,7 +44,7 @@
         aria-expanded="false">
         Juego </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+        <li><a class="dropdown-item" href="juego.html">¿Quién quiere ser millonario?</a></li>
       </ul>
     </li>
   </ul>
@@ -80,7 +80,8 @@
     </div>
     <br><br>
     <div class="card text-center fondo" id="pregunta1">
-
+      <br>
+      <br>
       <h3 class="display-5 h3 fondo"> 1. ¿Cuál sería el resultado de 3+2+''7''? </h3>
       <br>
       <br>
