--- a/formLogica.html
+++ b/formLogica.html
@@ -51,7 +51,7 @@
                 aria-expanded="false">
                 Juego </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="juego.html">Quien Quiere ser Millonario</a></li>
+                <li><a class="dropdown-item" href="juego.html">¿Quién quiere ser millonario?</a></li>
             </ul>
         </li>
 
