--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="./assets/img/aprende.png" class="img-fluid rounded " height="200" width="300" alt="">
             </div>
             <div class="col-lg-8">
-                <h4 class="text-center display-5"><strong>Conviértete en un expero en desarrollo front-end</strong></h4>
+                <h4 class="text-center display-5"><strong>Conviértete en un experto en desarrollo front-end</strong></h4>
                 <br>
                 <p>Helprogram es una plataforma de aprendizaje en línea que facilita la enseñanza de temas relacionados
                     con el desarrollo de software Front-end para convertirte en el programador que siempre quisiste ser
@@ -66,7 +66,7 @@
                     <h6><strong>Diviértete</strong></h6>
                 </label>
                 <!--<img src="./assets/img/diversion.png" alt=""><h6><strong>Diversión</strong></h6>-->
-                <p>!Diviertete jugando quien quiere ser millonario con preguntas acerca de todo lo aprendido!</p>
+                <p>!Diviértete jugando quién quiere ser millonario con preguntas acerca de todo lo aprendido!</p>
 
             </div>
             <div class="col-lg-4">
