correction question number 12 game

--- a/juego.html
+++ b/juego.html
@@ -468,8 +468,8 @@
       <div class="millonario__item">
         <div class="opciones">
           <div class="opciones__item">
-            <button id="a12" class="button fondoA"><span class="amarillo">A:</span>Para transformar un directorio en un
-              trabajo de Git</button>
+            <button id="a12" class="button fondoA"><span class="amarillo">A:</span>Para poder inicializar un repositorio
+              de GitHub</button>
           </div>
           <div class="opciones__item">
             <button id="b12" class="button fondoB"><span class="amarillo">B:</span>Para crear un init en git</button>
@@ -483,8 +483,8 @@
               remoto</button>
           </div>
           <div class="opciones__item">
-            <button id="d12" class="button fondoB"><span class="amarillo">D:</span>Para poder inicializar un repositorio
-              de GitHub</button>
+            <button id="d12" class="button fondoB"><span class="amarillo">D:</span>Para transformar un directorio en un
+              trabajo de Git</button>
           </div>
         </div>
       </div>
