--- a/cursos.html
+++ b/cursos.html
@@ -248,8 +248,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><strong>BOOTSTRAP</strong></h5>
-                <p class="card-text">Curso de Boostrap donde se aprenderá sobre las diferentes formas de instalar
-                  Boostrap, qué es Boostrap y entre otros temas.</p>
+                <p class="card-text">Curso de Bootstrap donde se aprenderá sobre las diferentes formas de instalar
+                  Bootstrap, qué es Bootstrap y entre otros temas.</p>
                 <br>
                 <a href="bootstrap.html" class="btn btn-primary">Comenzar</a>
 
@@ -304,7 +304,7 @@
   </div>
   <ul class="nav justify-content-center">
     <li class="nav-item">
-      <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+      <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Helprogram<br>2021
       </div>
     </li>
   </ul>
