--- a/formJS.html
+++ b/formJS.html
@@ -148,7 +148,7 @@
 
     </div>
     <footer class="footer footer1 bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Helprogram<br>2021
         </div>
     </footer>
 
