--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="col-lg-8">
                 <h4 class="display-5 text-center"><strong>Aprende a cualquier hora, en cualquier lugar</strong></h4>
                 <br>
-                <p>Sigue estudiando desde cualquier lugar, lo único que necesitas es tu tablet, celular ó computador e
+                <p>Sigue estudiando desde cualquier lugar, lo único que necesitas es tu tablet, celular o computador, e
                     internet </p>
 
             </div>
@@ -118,7 +118,7 @@
     <br>
 
     <footer class="footer bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Helprogram<br>2021
         </div>
 
     </footer>
