--- a/juego.html
+++ b/juego.html
@@ -66,15 +66,17 @@
         <span id="timer" style="color: white;" class="time"><strong>30 segundos</strong></span>
         <img src="./assets/img/millonario.gif" style="width: 50%;" alt="logo">
         <br>
-        <button class="btn btn-lg btn-dark" id="start">START</button>
+        <br>
+        
+        <button class="btn btn-lg btn-dark position-button" id="start">START</button>
       </div>
   
       <div class="col-lg-4">
-        <div class="inner"><button class="btn btn-dark" id="ayuda"><img src="./assets/img/public.png" alt=""></button>
+        <div class="inner"><button class="btn btn-dark position-button" id="ayuda"><img src="./assets/img/public.png" alt=""></button>
         </div>
-        <div class="inner"><button class="btn btn-dark" id="ayuda2"><img src="./assets/img/cell.png" alt=""></button>
+        <div class="inner"><button class="btn btn-dark position-button" id="ayuda2"><img src="./assets/img/cell.png" alt=""></button>
         </div>
-        <div class="inner"><button class="btn btn-dark cincuenta" id="ayuda3">50/50</button></div>
+        <div class="inner"><button class="btn btn-dark cincuenta position-button" id="ayuda3">50/50</button></div>
       </div>
   
     </div>
