--- a/logica.html
+++ b/logica.html
@@ -214,14 +214,29 @@
     <br>
     <div class="container bg-light text-center rounded-1" data-aos="fade-down">
         <br>
-        <h2 class="display-5"><strong>Cuestionario final</strong></h2>
+       
         <br>
-        <a href="./formLogica.html" class="btn btn-dark">Clic aqui para iniciar</a><br><br>
+        <div class="row">
+            <div class="col-lg-4" style="padding-left: 5%;">
+                <img src="./assets/img/preguntass.svg" class="img-fluid rounded " style="width: 90%;">
+            </div>
+            <div class="col-lg-8">
+                <h2 class=""><strong>Mide tu progreso</strong></h2>
+                <br>
+                <p style="text-align: center;">Realiza un corto cuestionario para medir lo que has aprendido !!
+                </p>
+                <br>
+                <a href="./formLogica.html" class="btn btn-info">Iniciar</a><br><br>
+                <br><br>
+            </div>
+        </div>
+      <br>
     </div>
+    <br>
 
 
     <footer class="footer1 footer bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Helprogram<br>2021
         </div>
     </footer>
 
