--- a/info.html
+++ b/info.html
@@ -62,16 +62,16 @@
     <div class="container" data-aos="fade-down">
         <br>
         <br>
-        <div class="">
+        <!--<div class="">
         <h2 class=""><span class="badge containeer2 black " style="
             font-size: larger;">SOBRE NOSOTROS</span></h2>
         </div>
         
-        <br>
+        <br>-->
 
 
         <div class="row" style="justify-content:center;">
-            <div class="card card-padding" data-aos="fade-down">
+            <div class="card  border-success mb-3" data-aos="fade-down">
                 <div class="card-header fondo" >
                     <br>
                     <img class="borde-img" src="./assets/img/DanielaApraez.JPG" />
@@ -96,7 +96,7 @@
                     
                 </div>
             </div>
-            <div class="card card-padding" data-aos="fade-down">
+            <div class="card border-warning mb-3" data-aos="fade-down">
                 <div class="card-header fondo" >
                     <br>
                     <img class="borde-img" src="./assets/img/MarioLoaiza.jpg" alt="ballons" />
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card card-padding" data-aos="fade-down">
+            <div class="card border-info mb-3" data-aos="fade-down">
                 <div class="card-header fondo" >
                     <br>
                     <img class="borde-img" src="./assets/img/JuanDavidDaza.jpg" />
@@ -144,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card card-padding" data-aos="fade-down">
+            <div class="card  border-success mb-3" data-aos="fade-down">
                 <div class="card-header fondo" >
                     <br>
                     <img class="borde-img" src="./assets/img/JaimeCastro.jpg" alt="ballons" />
@@ -165,7 +165,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card card-padding" data-aos="fade-down">
+            <div class="card border-warning mb-3" data-aos="fade-down">
                 <div class="card-header fondo" >
                     <br>
                     <img class="borde-img" src="./assets/img/CristhianAtehortua.jpg" alt="ballons" />
@@ -188,7 +188,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card card-padding" data-aos="fade-down">
+            <div class="card border-info mb-3" data-aos="fade-down">
                 <div class="card-header fondo" >
                     <br>
                     <img class="borde-img" src="./assets/img/manuelRestrepoRios.png" alt="ballons" />
